--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ jobs:
   pool:
     vmImage: ubuntu-16.04
   strategy:
-    matrix:
+    # matrix:
       py36:
         python.version: '3.6'
         TOXENV: py36
