--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,11 +24,11 @@ jobs:
 - job: 'ubuntu1604'
   pool:
     vmImage: ubuntu-16.04
-  strategy:
+  #strategy:
     # matrix:
-      py36:
-        python.version: '3.6'
-        TOXENV: py36
+    py36:
+      python.version: '3.6'
+      TOXENV: py36
 #      py37:
 #        python.version: '3.7'
 #        TOXENV: py37
