--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,9 +26,10 @@ jobs:
     vmImage: ubuntu-16.04
   #strategy:
     # matrix:
-    py36:
-      python.version: '3.6'
-      TOXENV: py36
+    steps:
+      py36:
+        python.version: '3.6'
+        TOXENV: py36
 #      py37:
 #        python.version: '3.7'
 #        TOXENV: py37
