--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ variables:
   PIP_CACHE_DIR: $(Pipeline.Workspace)/cache/pip
 
 
-jobs:
+# jobs:
 #- job: 'static_checks'
 #  pool:
 #    vmImage: ubuntu-16.04
@@ -21,7 +21,7 @@ jobs:
 #    - script: |
 #        tox
 #      displayName: tox
-- job: 'ubuntu1604'
+job: 'ubuntu1604'
   pool:
     vmImage: ubuntu-16.04
   #strategy:
