update tox.ini to include more python and update ubuntu for azure

--- a/tox.ini
+++ b/tox.ini
@@ -4,13 +4,23 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py38
+envlist = py35,py36,py37,py38
 
 [testenv]
-commands = py.test --cov={envsitepackagesdir}/tidal_stability -s {posargs}
+commands =
+    pytest --cov={envsitepackagesdir}/tidal_stability -s {posargs}
+    coverage html -d .coverage_html
+
 passenv =
     PYTHONFAULTHANDLER
     MPLBACKEND
-deps =-rtest-requirements.txt
+deps =
+    pytest
+    pytest-cov
+    codecov
+
 basepython =
+    py35: {env:TOXPYTHON:python3.5}
+    py36: {env:TOXPYTHON:python3.6}
+    py37: {env:TOXPYTHON:python3.7}
     py38: {env:TOXPYTHON:python3.8}
