--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,25 +5,25 @@ variables:
 
 
 jobs:
-- job: 'static_checks'
-  pool:
-    vmImage: ubuntu-16.04
-  variables:
-    TOXENV: docs,check-manifest
-  steps:
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '3.8'
-        architecture: 'x64'
-    - script: |
-        pip install tox
-      displayName: Install tox
-    - script: |
-        tox
-      displayName: tox
+#- job: 'static_checks'
+#  pool:
+#    vmImage: ubuntu-16.04
+#  variables:
+#    TOXENV: docs,check-manifest
+#  steps:
+#    - task: UsePythonVersion@0
+#      inputs:
+#        versionSpec: '3.8'
+#        architecture: 'x64'
+#    - script: |
+#        pip install tox
+#      displayName: Install tox
+#    - script: |
+#        tox
+#      displayName: tox
 - job: 'ubuntu1604'
   pool:
-    vmImage: ubuntu-16.04
+    vmImage: ubuntu-latest
   strategy:
     matrix:
       py36:
