--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,15 +31,19 @@ jobs:
       py36:
         python.version: '3.6'
         TOXENV: py36
+        SUNDIALS_VERSION: '5.1.0'
       py37:
         python.version: '3.7'
         TOXENV: py37
+        SUNDIALS_VERSION: '5.1.0'
       py38:
         python.version: '3.8'
         TOXENV: py38
+        SUNDIALS_VERSION: '5.1.0'
       py39:
         python.version: '3.9'
         TOXENV: py39
+        SUNDIALS_VERSION: '5.1.0'
     maxParallel: 4
 
   steps:
@@ -52,15 +56,22 @@ jobs:
     vmImage: macOS-10.15
   strategy:
     matrix:
+      py36:
+        python.version: '3.6'
+        TOXENV: py36
+        SUNDIALS_VERSION: '5.1.0'
       py37:
         python.version: '3.7'
         TOXENV: py37
+        SUNDIALS_VERSION: '5.1.0'
       py38:
         python.version: '3.8'
         TOXENV: py38
+        SUNDIALS_VERSION: '5.1.0'
       py39:
         python.version: '3.9'
         TOXENV: py39
+        SUNDIALS_VERSION: '5.1.0'
     maxParallel: 4
 
   steps:
