--- a/ci/azure-pipelines-steps.yml
+++ b/ci/azure-pipelines-steps.yml
@@ -1,4 +1,11 @@
 steps:
+- task: CacheBeta@0
+  displayName: SUNDIALS cache
+  inputs:
+    key: SUNDIALS | "$(Agent.OS)" | "${{ parameters.vmImage }}" | "$(SUNDIALS_VERSION)"
+    path: $(HOME)/sundials/
+  condition: and(succeeded(), ne(variables['SUNDIALS_VERSION'], ''))
+
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '$(python.version)'
@@ -17,6 +24,7 @@ steps:
 - script: |
     tox
   displayName: 'tox'
+  env: {"BASH_ENV": "./ci_support/ensure_sundials_installed.sh"}
 
 - script: |
     codecov
