--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,8 +2,8 @@
 
 trigger: none
 
-variables:
-  PIP_CACHE_DIR: $(Pipeline.Workspace)/cache/pip
+#variables:
+#  PIP_CACHE_DIR: $(Pipeline.Workspace)/cache/pip  # To be readded later when actually casheing pip.
 
 
 jobs:
@@ -31,19 +31,19 @@ jobs:
       py36:
         python.version: '3.6'
         TOXENV: py36
-        SUNDIALS_VERSION: '4.1.0'
+        SUNDIALS_VERSION: '5.1.0'
       py37:
         python.version: '3.7'
         TOXENV: py37
-        SUNDIALS_VERSION: '4.1.0'
+        SUNDIALS_VERSION: '5.1.0'
       py38:
         python.version: '3.8'
         TOXENV: py38
-        SUNDIALS_VERSION: '4.1.0'
+        SUNDIALS_VERSION: '5.1.0'
       py39:
         python.version: '3.9'
         TOXENV: py39
-        SUNDIALS_VERSION: '4.1.0'
+        SUNDIALS_VERSION: '5.1.0'
     maxParallel: 4
 
   steps:
@@ -59,19 +59,19 @@ jobs:
       py36:
         python.version: '3.6'
         TOXENV: py36
-        SUNDIALS_VERSION: '4.1.0'
+        SUNDIALS_VERSION: '5.1.0'
       py37:
         python.version: '3.7'
         TOXENV: py37
-        SUNDIALS_VERSION: '4.1.0'
+        SUNDIALS_VERSION: '5.1.0'
       py38:
         python.version: '3.8'
         TOXENV: py38
-        SUNDIALS_VERSION: '4.1.0'
+        SUNDIALS_VERSION: '5.1.0'
       py39:
         python.version: '3.9'
         TOXENV: py39
-        SUNDIALS_VERSION: '4.1.0'
+        SUNDIALS_VERSION: '5.1.0'
     maxParallel: 4
 
   steps:
