--- a/ci/azure-pipelines-steps.yml
+++ b/ci/azure-pipelines-steps.yml
@@ -1,10 +1,10 @@
 steps:
-- task: CacheBeta@0
-  displayName: SUNDIALS cache
-  inputs:
-    key: SUNDIALS | "$(Agent.OS)" | "${{ parameters.vmImage }}" | "$(SUNDIALS_VERSION)"
-    path: $(HOME)/sundials/
-  condition: and(succeeded(), ne(variables['SUNDIALS_VERSION'], ''))
+#- task: CacheBeta@0
+#  displayName: SUNDIALS cache
+#  inputs:
+#    key: SUNDIALS | "$(Agent.OS)" | "${{ parameters.vmImage }}" | "$(SUNDIALS_VERSION)"
+#    path: $(HOME)/sundials/
+#  condition: and(succeeded(), ne(variables['SUNDIALS_VERSION'], ''))
 
 - task: UsePythonVersion@0
   inputs:
@@ -16,6 +16,7 @@ steps:
 - script: |
     python -m pip install --upgrade pip
     pip install tox codecov
+# maybe add setuptools and wheel?
   displayName: 'Install pip dependencies'
 
 - script: env
