dirty create directory to test sundials install

--- a/ci/azure-pipelines-steps.yml
+++ b/ci/azure-pipelines-steps.yml
@@ -15,9 +15,8 @@ steps:
 
 
 - bash: |
-    ls -l
     chmod +x ci/install_sundials.sh
-    ls -l
+    mkdir -p include/sundials
     ./ci/install_sundials.sh
   displayName: "Sundials script"
 
