--- a/ci/azure-pipelines-steps.yml
+++ b/ci/azure-pipelines-steps.yml
@@ -15,8 +15,10 @@ steps:
 
 
 - bash: |
-    chmod +x ci/install_sundials.sh
-    ./ci/install_sundials.sh
+#    chmod +x ci/install_sundials.sh
+#    ./ci/install_sundials.sh
+    chmod +x ci/ensure_sundials_installed.sh
+    ./ci/ensure_sundials_installed.sh
   displayName: "Sundials script"
 
 - script: |
