update permissions for both scripts

--- a/ci/azure-pipelines-steps.yml
+++ b/ci/azure-pipelines-steps.yml
@@ -16,6 +16,7 @@ steps:
 
 - bash: |
     chmod +x ci/ensure_sundials_installed.sh
+    chmod +x ci/install_sundials.sh
     ./ci/ensure_sundials_installed.sh
   displayName: "Sundials script"
 #    chmod +x ci/install_sundials.sh
