--- a/ci/azure-pipelines-steps.yml
+++ b/ci/azure-pipelines-steps.yml
@@ -31,9 +31,10 @@ steps:
   displayName: 'print env'
 
 - script: |
+
     tox
   displayName: 'tox'
-  # env: {"BASH_ENV": "./ci/ensure_sundials_installed.sh"}
+  env: {"BASH_ENV": "./ci/ensure_sundials_installed.sh"}
 
 - script: |
     codecov
