--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,30 +51,31 @@ jobs:
       parameters:
         platform: linux
 
-- job: 'macOS1015'
-  pool:
-    vmImage: macOS-10.15
-  strategy:
-    matrix:
-      py36:
-        python.version: '3.6'
-        TOXENV: py36
-        SUNDIALS_VERSION: '5.1.0'
-      py37:
-        python.version: '3.7'
-        TOXENV: py37
-        SUNDIALS_VERSION: '5.1.0'
-      py38:
-        python.version: '3.8'
-        TOXENV: py38
-        SUNDIALS_VERSION: '5.1.0'
-      py39:
-        python.version: '3.9'
-        TOXENV: py39
-        SUNDIALS_VERSION: '5.1.0'
-    maxParallel: 4
-
-  steps:
-    - template: ci/azure-pipelines-steps.yml
-      parameters:
-        platform: macos
+# To add Macintosh tests need to add a fortran 77 compiler to azure.
+#- job: 'macOS1015'
+#  pool:
+#    vmImage: macOS-10.15
+#  strategy:
+#    matrix:
+#      py36:
+#        python.version: '3.6'
+#        TOXENV: py36
+#        SUNDIALS_VERSION: '5.1.0'
+#      py37:
+#        python.version: '3.7'
+#        TOXENV: py37
+#        SUNDIALS_VERSION: '5.1.0'
+#      py38:
+#        python.version: '3.8'
+#        TOXENV: py38
+#        SUNDIALS_VERSION: '5.1.0'
+#      py39:
+#        python.version: '3.9'
+#        TOXENV: py39
+#        SUNDIALS_VERSION: '5.1.0'
+#    maxParallel: 4
+#
+#  steps:
+#    - template: ci/azure-pipelines-steps.yml
+#      parameters:
+#        platform: macos
