--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,28 +1,6 @@
-# from matplotlib's azure setup
-
 trigger: none
 
-variables:
-  PIP_CACHE_DIR: $(Pipeline.Workspace)/cache/pip
-
-
 jobs:
-#- job: 'static_checks'
-#  pool:
-#    vmImage: ubuntu-16.04
-#  variables:
-#    TOXENV: docs,check-manifest
-#  steps:
-#    - task: UsePythonVersion@0
-#      inputs:
-#        versionSpec: '3.8'
-#        architecture: 'x64'
-#    - script: |
-#        pip install tox
-#      displayName: Install tox
-#    - script: |
-#        tox
-#      displayName: tox
 - job: 'ubuntu1604'
   pool:
     vmImage: ubuntu-latest
@@ -31,15 +9,19 @@ jobs:
       py36:
         python.version: '3.6'
         TOXENV: py36
+        SUNDIALS_VERSION: '5.1.0'
       py37:
         python.version: '3.7'
         TOXENV: py37
+        SUNDIALS_VERSION: '5.1.0'
       py38:
         python.version: '3.8'
         TOXENV: py38
+        SUNDIALS_VERSION: '5.1.0'
       py39:
         python.version: '3.9'
         TOXENV: py39
+        SUNDIALS_VERSION: '5.1.0'
     maxParallel: 4
 
   steps:
@@ -47,23 +29,4 @@ jobs:
       parameters:
         platform: linux
 
-- job: 'macOS1015'
-  pool:
-    vmImage: macOS-10.15
-  strategy:
-    matrix:
-      py37:
-        python.version: '3.7'
-        TOXENV: py37
-      py38:
-        python.version: '3.8'
-        TOXENV: py38
-      py39:
-        python.version: '3.9'
-        TOXENV: py39
-    maxParallel: 4
-
-  steps:
-    - template: ci/azure-pipelines-steps.yml
-      parameters:
-        platform: macos
+# To add Macintosh tests; need to add a fortran 77 compiler to azure.
