--- a/ci/azure-pipelines-steps.yml
+++ b/ci/azure-pipelines-steps.yml
@@ -1,4 +1,11 @@
 steps:
+- task: CacheBeta@0
+  displayName: SUNDIALS cache
+  inputs:
+    key: SUNDIALS | "$(Agent.OS)" | "${{ parameters.vmImage }}" | "$(SUNDIALS_VERSION)"
+    path: $(HOME)/sundials/
+  condition: and(succeeded(), ne(variables['SUNDIALS_VERSION'], ''))
+
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '$(python.version)'
@@ -6,9 +13,15 @@ steps:
   displayName: 'Use Python $(python.version)'
   condition: and(succeeded(), ne(variables['python.version'], 'Pre'))
 
+- bash: |
+    chmod +x ci/ensure_sundials_installed.sh
+    chmod +x ci/install_sundials.sh
+    ./ci/ensure_sundials_installed.sh
+  displayName: "Check sundials is installed"
+
 - script: |
     python -m pip install --upgrade pip
-    pip install tox codecov
+    pip install tox codecov setuptools wheel
   displayName: 'Install pip dependencies'
 
 - script: env
@@ -17,6 +30,7 @@ steps:
 - script: |
     tox
   displayName: 'tox'
+  env: {"BASH_ENV": "./ci/ensure_sundials_installed.sh"}
 
 - script: |
     codecov
